--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ buildscript {
         hilt_version = "2.43.2"
     }
 
+    repositories {
+        // other repositories...
+        mavenCentral()
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.2' apply false
