로그인 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,8 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.43.2"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
-
-
+    //security-crypto
+    implementation "androidx.security:security-crypto:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
