--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
-
-
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0")
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.43.2"
     kapt "com.google.dagger:hilt-compiler:2.43.2"
