--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,6 @@ plugins {
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.dagger.hilt.android' version '2.43.2' apply false
+//    id 'org.jetbrains.kotlin.jvm' version '1.8.21' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.0' apply false
 }
